--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.3.12",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
@@ -33,6 +34,7 @@
     "@angular/router": "^20.3.0",
     "axios": "^1.13.2",
     "material-icons": "^1.13.14",
+    "ngx-toastr": "^19.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
