--- a/package.json
+++ b/package.json
@@ -1,29 +1,14 @@
 {
   "name": "frontend",
   "version": "0.0.0",
-  "main": "electron/main.js",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "electron": "wait-on http://localhost:4200 && electron .",
-    "desktop": "concurrently \"npm run start\" \"npm run electron\""
-  },
-  "prettier": {
-    "printWidth": 100,
-    "singleQuote": true,
-    "overrides": [
-      {
-        "files": "*.html",
-        "options": {
-          "parser": "angular"
-        }
-      }
-    ]
-  },
   "private": true,
+  "scripts": {
+  "start": "ng serve --host 0.0.0.0 --port 4200",
+  "build": "ng build",
+  "preview": "serve dist/frontend/browser -s -l 4200",
+  "test": "ng test"
+}
+,
   "dependencies": {
     "@angular/animations": "^20.3.12",
     "@angular/common": "^20.3.0",
@@ -44,15 +29,12 @@
     "@angular/cli": "^20.3.9",
     "@angular/compiler-cli": "^20.3.0",
     "@types/jasmine": "~5.1.0",
-    "concurrently": "^8.2.0",
-    "electron": "^39.2.3",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.9.2",
-    "wait-on": "^9.0.3"
+    "typescript": "~5.9.2"
   }
 }
